--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 PORT=
+API_BASE_URL=
 DATABASE_URL=
 NODE_ENV=
+SALT_ROUNDS=
+JWT_SECRET=
+JWT_EXPIRES_IN=
+REFRESH_TOKEN_SECRET=
+REFRESH_TOKEN_EXPIRES_IN=
+STORAGE_LOCATION=
